frontend/app/components/Navigation/subnav.module.scss
.sub-nav {
  border-bottom: 1px solid var(--black);
  margin-top: 1.9375rem;
  border-top: 1px solid var(--black);
  &__container {
    display: flex;
    gap: 2.5rem;
    border-left: 1px solid var(--black);
    margin-left: auto;
    padding: 0.5rem 2rem 0.5rem 0.5rem;
    width: max-content;
    max-width: 100%;
    justify-content: space-between;

    @media screen and (max-width: 800px) {
      padding-right: 0.5rem;
      padding-left: 0.5rem;
      margin-left: 0;
      border-left: none;
      width: 100%;
    }

    >div:last-child {
      text-align: right;
    }

    a {
      display: flex;
      align-items: center;
      gap: 0.25rem;
      text-decoration: none;
      font-size: 0.75rem;
      text-transform: uppercase;
      font-weight: 400;

      &:hover {
        font-weight: 600;
      }
    }

    .label {
      position: relative;

      span:first-child {
        font-weight: 600;
        visibility: hidden;
      }

      span:last-child {
        position: absolute;
        left: 0;
      }
    }
  }
}

